// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsultationPlan /> renders a closed plan 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "myStep",
    ],
    Array [
      "myStep",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ConsultationPlan /> renders a closed plan 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "myStep",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ConsultationPlan /> renders a closed plan: renders a closed plan 1`] = `
<div
  className="consultation-plan_close sticky col-md-3 col-sm-12"
  id="consultation-plan"
>
  <Button
    active={false}
    aria-label="open-the-plan"
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="p-0 btn-md"
    disabled={false}
    id="ConsultationPlan-open"
    onClick={[Function]}
  >
    <i
      className="cap cap-android-menu mr-5 hidden-xs hidden-sm"
    />
    <FormattedMessage
      id="plan"
      values={Object {}}
    />
    <i
      className="cap cap-android-menu ml-5 hidden-md hidden-lg"
    />
  </Button>
</div>
`;

exports[`<ConsultationPlan /> renders a closed plan: renders a reopen plan 1`] = `
<div
  className="consultation-plan sticky col-md-3 col-sm-12"
  id="consultation-plan"
>
  <StackedNav>
    <div
      className="stacked-nav__header"
    >
      <p>
        <i
          className="cap cap-android-menu mr-5"
        />
        <FormattedMessage
          id="plan"
          values={Object {}}
        />
      </p>
      <Button
        active={false}
        aria-label="close-the-plan"
        block={false}
        bsClass="btn"
        bsStyle="link"
        className="p-0 btn-md"
        disabled={false}
        id="ConsultationPlan-close"
        onClick={[Function]}
      >
        <i
          className="cap cap-delete-1"
        />
      </Button>
    </div>
    <div
      className="stacked-nav__list"
    >
      <ConsultationPlanItems
        key="0"
        level={0}
        section={
          Object {
            "$fragmentRefs": null,
            "sections": Array [],
          }
        }
      />
      <ConsultationPlanItems
        key="1"
        level={0}
        section={
          Object {
            "$fragmentRefs": null,
            "sections": Array [],
          }
        }
      />
    </div>
    <div
      className="stacked-nav__footer"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        className="p-0"
        disabled={false}
        id="ConsultationPlan-backToTop"
        onClick={[Function]}
      >
        <i
          className="cap cap-arrow-68 mr-5"
        />
        <FormattedMessage
          id="back-to-top"
          values={Object {}}
        />
      </Button>
    </div>
  </StackedNav>
</div>
`;

exports[`<ConsultationPlan /> renders an open plan with a backToTop link 1`] = `
<div
  className="consultation-plan sticky col-md-3 col-sm-12"
  id="consultation-plan"
>
  <StackedNav>
    <div
      className="stacked-nav__header"
    >
      <p>
        <i
          className="cap cap-android-menu mr-5"
        />
        <FormattedMessage
          id="plan"
          values={Object {}}
        />
      </p>
      <Button
        active={false}
        aria-label="close-the-plan"
        block={false}
        bsClass="btn"
        bsStyle="link"
        className="p-0 btn-md"
        disabled={false}
        id="ConsultationPlan-close"
        onClick={[Function]}
      >
        <i
          className="cap cap-delete-1"
        />
      </Button>
    </div>
    <div
      className="stacked-nav__list"
    >
      <ConsultationPlanItems
        key="0"
        level={0}
        section={
          Object {
            "$fragmentRefs": null,
            "sections": Array [],
          }
        }
      />
      <ConsultationPlanItems
        key="1"
        level={0}
        section={
          Object {
            "$fragmentRefs": null,
            "sections": Array [],
          }
        }
      />
    </div>
    <div
      className="stacked-nav__footer"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        className="p-0"
        disabled={false}
        id="ConsultationPlan-backToTop"
        onClick={[Function]}
      >
        <i
          className="cap cap-arrow-68 mr-5"
        />
        <FormattedMessage
          id="back-to-top"
          values={Object {}}
        />
      </Button>
    </div>
  </StackedNav>
</div>
`;

exports[`<ConsultationPlan /> renders an open plan with a backToTop link 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "behavior": "smooth",
        "block": "start",
        "inline": "nearest",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<ConsultationPlan /> renders null when < 2 sections 1`] = `""`;
